--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dirs = "4.0.0"
 google-sheets4 = "4.0.1"
 structopt = "0.3.26"
 tokio = { version = "1.26.0", features = ["full"] }
